basic content from business figma plan.
need to add more content for our product steps, social proof and testmonials.

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "prettier": "2.0.5"
   },
   "keywords": [
-    "gatsby"
-    ,"landing-page"
-    ,"saas"
-    ,"starter"
-    ,"home-page"
+    "gatsby",
+    "landing-page",
+    "saas",
+    "starter",
+    "home-page"
   ],
   "license": "MIT",
   "scripts": {
